@@ -24,7 +24,8 @@ FONT_WIDTH=8;
 FONT_HEIGHT=10;
 
 ;Screen Specific elements:
-FIRST_ENTRY_X=28;
+;390 for longer rows
+X_RANGE=28,323;
 FIRST_ENTRY_Y=32;
 Y_INCREMENT=16;
 COLOR_OPTION_NAME_TEXT=FFFFFF;
